--- a/bower.json
+++ b/bower.json
@@ -14,8 +14,7 @@
     "momentjs": "~2.7.0",
     "angular-bootstrap": "~0.11.0",
     "ng-grid": "~2.0.11",
-    "d3": "~3.4.8",
-    "angularjs-nvd3-directives": "~0.0.7"
+    "highcharts-ng": "~0.0.6"
   },
   "devDependencies": {
     "angular-mocks": "1.2.11",
